--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+
     <title>Tech-titans App</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
